syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "google/api/annotations.proto";
import "kalix/annotations.proto";

import "io/kx/loanapp/api/loan_app_api.proto";
import "io/kx/loanapp/domain/loan_app_domain.proto";

package io.kx.loanapp.view;

option java_outer_classname = "LoanAppViewByStatusModel";

message GetLoanAppStatusRequest {
  int32 status_id = 1;
}

message LoanAppViewState {
  int32 status_id = 1;
  loanapp.api.LoanAppStatus status  =2;
  string loan_app_id = 3;
  google.protobuf.Timestamp last_updated_timestamp = 4;
}

message LoanAppViewResponse {
  repeated LoanAppViewState results = 1;
}

service LoanAppByStatus {

  option (kalix.codegen) = {
    view: {}
  };

  rpc GetLoanAppByStatus(GetLoanAppStatusRequest) returns (LoanAppViewResponse) {
    option (kalix.method).view.query = {
      query: "SELECT * AS results"
          " FROM loan_app_by_status"
          " WHERE status_id = :status_id"
    };

    option (google.api.http) = {
      post: "/loanapp/views/by-status",
      body: "*"
    };
  }

  rpc OnSubmitted(loanapp.domain.Submitted) returns (LoanAppViewState) {
    option (kalix.method).eventing.in = {
      event_sourced_entity: "loanapp"
    };

    option (kalix.method).view.update = {
      table: "loan_app_by_status"
      transform_updates: true
    };
  }

  rpc OnApproved(loanapp.domain.Approved) returns (LoanAppViewState) {
    option (kalix.method).eventing.in = {
      event_sourced_entity: "loanapp"
    };

    option (kalix.method).view.update = {
      table: "loan_app_by_status"
      transform_updates: true
    };
  }

  rpc IgnoreEvent(google.protobuf.Any) returns (LoanAppViewState) {
    option (kalix.method).eventing.in = {
      event_sourced_entity: "loanapp"
    };

    option (kalix.method).view.update = {
      table: "loan_app_by_status"
      transform_updates: true
    };
  }

}